nav alignment on mobile fix

--- a/client/src/nav/nav.css
+++ b/client/src/nav/nav.css
@@ -104,9 +104,8 @@ nav div .nav-items:hover {
   z-index: 10;
 }
 
-@media (max-aspect-ratio : 3/4) {
-  /* Styles */
+/* @media (max-aspect-ratio : 3/4) {
   .navButton {
     left: 33vw;
   }
-}
+} */
